--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,11 @@
 language: java
 jdk:
 - openjdk8
-script: ant build
+addons:
+sonarcloud:
+organization: simonesinceri
+token:
+secure: 3af3f5c00518fa3a5353f3e93d2f9cf01e86d651
+script:
+- ant build
+- sonar-scanner
