--- a/.travis.yml
+++ b/.travis.yml
@@ -4,9 +4,9 @@ jdk:
 
 addons:
 sonarcloud:
-organization: "simonesinceri"
+organization: simonesinceri
 token:
-secure: "3af3f5c00518fa3a5353f3e93d2f9cf01e86d651"
+secure: bb3f97210481d5fc7392d6312f08bffd64a359dd
 script:
 - ant build
 - sonar-scanner
