--- a/.travis.yml
+++ b/.travis.yml
@@ -1,12 +1,11 @@
 language: java
 jdk:
 - openjdk8
-
 addons:
 sonarcloud:
-organization: simonesinceri
+organization: "simonesinceri"
 token:
-secure: bb3f97210481d5fc7392d6312f08bffd64a359dd
+secure: "bb3f97210481d5fc7392d6312f08bffd64a359dd"
 script:
 - ant build
 - sonar-scanner
