--- a/.travis.yml
+++ b/.travis.yml
@@ -3,10 +3,10 @@ jdk:
 - openjdk8
 
 addons:
-sonarcloud:
-organization: "simonesinceri"
-token:
-secure: "bb3f97210481d5fc7392d6312f08bffd64a359dd"
+ sonarcloud:
+  organization: simonesinceri
+  token:
+   secure: bb3f97210481d5fc7392d6312f08bffd64a359dd
 script:
 - ant build
 - sonar-scanner
