--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -27,7 +27,7 @@ sonar.language=java
 #   Java config
 # =====================================================
 sonar.java.source=1.8
-sonar.java.binaries=**/target/classes
+sonar.java.binaries=.
 
 # Debug
 sonar.verbose=true
