--- a/build.xml
+++ b/build.xml
@@ -3,22 +3,23 @@
               Any modifications will be overwritten.
               To include a user specific buildfile here, simply create one in the same
               directory with the processing instruction <?eclipse.ant.import?>
-              as the first entry and export the buildfile again. --><project basedir="." default="build" name="provahellotravis">
+              as the first entry and export the buildfile again. --><project basedir="." default="build" name="interface">
     <property environment="env"/>
+    <property name="ECLIPSE_HOME" value="../../eclipse/jee-2019-12/eclipse/"/>
     <property name="debuglevel" value="source,lines,vars"/>
-    <property name="target" value="11"/>
-    <property name="source" value="11"/>
-    <path id="provahellotravis.classpath">
-        <pathelement location="bin"/>
+    <property name="target" value="1.8"/>
+    <property name="source" value="1.8"/>
+    <path id="JavaFX SDK.libraryclasspath">
+        <pathelement location="../../.p2/pool/plugins/org.eclipse.fx.ide.css.jfx8_3.5.0.201907240300.jar"/>
     </path>
-    <path id="run.HelloWorld (1).classpath">
-        <path refid="provahellotravis.classpath"/>
+    <path id="interface.classpath">
+        <pathelement location="bin"/>
+        <path refid="JavaFX SDK.libraryclasspath"/>
     </path>
     <target name="init">
         <mkdir dir="bin"/>
         <copy includeemptydirs="false" todir="bin">
             <fileset dir="src">
-                <exclude name="**/*.launch"/>
                 <exclude name="**/*.java"/>
             </fileset>
         </copy>
@@ -33,13 +34,36 @@
         <echo message="${ant.project.name}: ${ant.file}"/>
         <javac debug="true" debuglevel="${debuglevel}" destdir="bin" includeantruntime="false" source="${source}" target="${target}">
             <src path="src"/>
-            <classpath refid="provahellotravis.classpath"/>
+            <classpath refid="interface.classpath"/>
         </javac>
     </target>
     <target description="Build all projects which reference this project. Useful to propagate changes." name="build-refprojects"/>
-    <target name="HelloWorld (1)">
-        <java classname="provahellotravis.HelloWorld" failonerror="true" fork="yes">
-            <classpath refid="run.HelloWorld (1).classpath"/>
+    <target description="copy Eclipse compiler jars to ant lib directory" name="init-eclipse-compiler">
+        <copy todir="${ant.library.dir}">
+            <fileset dir="${ECLIPSE_HOME}/plugins" includes="org.eclipse.jdt.core_*.jar"/>
+        </copy>
+        <unzip dest="${ant.library.dir}">
+            <patternset includes="jdtCompilerAdapter.jar"/>
+            <fileset dir="${ECLIPSE_HOME}/plugins" includes="org.eclipse.jdt.core_*.jar"/>
+        </unzip>
+    </target>
+    <target description="compile project with Eclipse compiler" name="build-eclipse-compiler">
+        <property name="build.compiler" value="org.eclipse.jdt.core.JDTCompilerAdapter"/>
+        <antcall target="build"/>
+    </target>
+    <target name="application">
+        <java classname="logic.application" failonerror="true" fork="yes">
+            <classpath refid="interface.classpath"/>
+        </java>
+    </target>
+    <target name="Base">
+        <java classname="logic.Base" failonerror="true" fork="yes">
+            <classpath refid="interface.classpath"/>
+        </java>
+    </target>
+    <target name="Main (3)">
+        <java classname="logic.Main" failonerror="true" fork="yes">
+            <classpath refid="interface.classpath"/>
         </java>
     </target>
 </project>
