--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -16,8 +16,8 @@ sonar.links.issue=https://github.com/simonesinceri/provaTravis/issues
 # =====================================================
 
 sonar.host.url=https://sonarcloud.io
-sonar.organization=simonesinceri
-sonar.login=bb3f97210481d5fc7392d6312f08bffd64a359dd
+sonar.organization="simonesinceri"
+sonar.login="bb3f97210481d5fc7392d6312f08bffd64a359dd"
 sonar.sources=src
 sonar.language=java
 
