trovate vers corretta file .yml for sonar-cloud

--- a/.travis.yml
+++ b/.travis.yml
@@ -8,8 +8,7 @@ addons:
             - ant 
     sonarcloud:
         organization: simonesinceri
-        token: 
-            secure: bb3f97210481d5fc7392d6312f08bffd64a359dd
+        token: bb3f97210481d5fc7392d6312f08bffd64a359dd
             
 script:
     - ant build
