prova new vers project senza view

--- a/build.xml
+++ b/build.xml
@@ -3,13 +3,13 @@
               Any modifications will be overwritten.
               To include a user specific buildfile here, simply create one in the same
               directory with the processing instruction <?eclipse.ant.import?>
-              as the first entry and export the buildfile again. --><project basedir="." default="build" name="find">
+              as the first entry and export the buildfile again. --><project basedir="." default="build" name="progettoIspw">
     <property environment="env"/>
     <property name="ECLIPSE_HOME" value="../../eclipse/jee-2019-12/eclipse/"/>
     <property name="debuglevel" value="source,lines,vars"/>
     <property name="target" value="1.8"/>
     <property name="source" value="1.8"/>
-    <path id="find.classpath">
+    <path id="progettoIspw.classpath">
         <pathelement location="bin"/>
     </path>
     <target name="init">
@@ -30,7 +30,7 @@
         <echo message="${ant.project.name}: ${ant.file}"/>
         <javac debug="true" debuglevel="${debuglevel}" destdir="bin" includeantruntime="false" source="${source}" target="${target}">
             <src path="src"/>
-            <classpath refid="find.classpath"/>
+            <classpath refid="progettoIspw.classpath"/>
         </javac>
     </target>
     <target description="Build all projects which reference this project. Useful to propagate changes." name="build-refprojects"/>
@@ -46,10 +46,5 @@
     <target description="compile project with Eclipse compiler" name="build-eclipse-compiler">
         <property name="build.compiler" value="org.eclipse.jdt.core.JDTCompilerAdapter"/>
         <antcall target="build"/>
-    </target>
-    <target name="Main (5)">
-        <java classname="logic.view.Main" failonerror="true" fork="yes">
-            <classpath refid="find.classpath"/>
-        </java>
     </target>
 </project>
